[package]
name = "cao"
version = "0.0.0"
description = "turbo-powered paper"
authors = ["Shabang Systems, LLC"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = [] }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
chrono = { version = "0.4.38", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
toml = "0.8.19"
anyhow = "1.0.86"
serde-lexpr = "0.1.3"
regex = "1.10.6"
icalendar = "0.16.5"
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3.30"
chrono-tz = "0.9.0"
localzone = { version = "0.3.1", features = ["win_zones"] }
rrule = { version = "0.13.0", features = ["serde"] }
notify = { version = "6.1.1", default-features = false, features = ["macos_fsevent"] }
tauri-plugin-shell = "2.0.0-rc"
tauri-plugin-dialog = "2.0.0-rc"
tauri-plugin-fs = "2.0.0-rc"

[dependencies.uuid]
version = "1.10.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib", "lib"]
